# cpp-search-server

./: .clang-format  .gitignore  CMakeLists.txt
bus_manager/: bus_manager.cpp  bus_manager.hpp  datebase.hpp  table.hpp
search-server/: array_ptr.h  concurrent_map.h  document.cpp  document.h  ini.cpp  ini.h  json.cpp  json.h  libstat.cpp  libstat.h  libstat_test.cpp  list.h  log_duration.h  main.cpp  massert.h  massert.hpp  my_assert.h  paginator.h  process_queries.cpp  process_queries.h  read_input_functions.cpp  read_input_functions.h  remove_duplicates.h  request_queue.h  request_queue.hpp  search_server.cpp  search_server.h  server.cpp  server.hpp  simple_vector.h  simple_vector_test.h  stack_vector.h  string_processing.cpp  string_processing.h  synonyms.cpp  synonyms.hpp  test_example_functions.cpp  test_example_functions.h  test_framework.h  xml.cpp  (+1 more)
search-server/tests/: main.cpp  server_test.cpp  server_test.h  server_test.hpp  synonyms_test.cpp  tests.hpp
training/: s1_t_4_6.cpp  server.hpp
training/section_1/topic_6/: s1_t_6.cpp  server.hpp
training/section_1/topic_7/: s1_t_7.cpp  team_tasks.hpp
training/section_1/topic_8/: s1_t_8_p_6.cpp  server_8.hpp
transport-catalogue/: geo.h  input_reader.cpp  input_reader.h  main.cpp  stat_reader.cpp  stat_reader.h  transport_catalogue.cpp  transport_catalogue.h
